# mio-timer

./: Cargo.toml  readme.md
examples/: event_loop.rs  work_with_poll.rs  work_without_poll.rs
src/: lib.rs  timer.rs
src/event_loop/: event_loop.rs  handler.rs  mod.rs  notify_error.rs
