[package]
name = "mio-timer"
description = "A simple timer library for mio 1.0"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pana/mio-timer"

[dependencies]
lazycell = "1.3.0"
log = "0.4.27"
mio = "1.0.4"
slab = "0.4.10"
mio-misc = { version = "2.1.0", git = "https://github.com/Pana/mio-misc", rev = "27ad80f" }

[dev-dependencies]
env_logger = "0.11"
mio = { version = "1.0.4", features = ["os-poll"] }
